assets/styles/global/modifiers/_text.scss
.has-line-height-120 {
  line-height: 120% !important;
}

.has-text-overflow-ellipsis {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.has-text-underline {
  text-decoration: underline;
}

.has-text-logo {
  font-family: CocogooseProSemilight, sans-serif !important
}

.has-text-rounded {
  font-family: VisbyRoundCF, sans-serif;
}

.has-no-hover-text-decoration {
  &:hover {
    text-decoration: none !important;
  }
}

.has-no-hover-text-color {
  &:hover {
    color: inherit !important;
  }
}

.is-size-8 {
  font-size: 0.50rem;
}

